@@ -388,7 +388,6 @@
             <shortcut key="STRG-S">Speichern der Schaltung.</shortcut>
             <shortcut key="STRG-Z">Letzte Änderung zurücknehmen.</shortcut>
             <shortcut key="STRG-Y">Zurückgenommene Änderung erneut anwenden.</shortcut>
-            <shortcut key="B">Anzahl der Datenbits in allen selektierten Elementen setzen.</shortcut>
             <shortcut key="P">Programmieren einer Diode oder eines FG-FET.</shortcut>
             <shortcut key="D">Beim Ziehen einer rechteckigen Leitung in den Diagonalmodus wechseln.</shortcut>
             <shortcut key="F">Beim Ziehen einer rechteckigen Leitung die Orientierung wechseln.</shortcut>
